Fixed shifty

--- a/app/assets/stylesheets/shifty_styles.css
+++ b/app/assets/stylesheets/shifty_styles.css
@@ -70,70 +70,68 @@ body {
 	border-radius: 5px;
 }
 
-.button{
-	text-decoration:none;
-	text-align:center; 
-	padding:11px 32px; 
-	border:solid 1px #ffa930; 
-	-webkit-border-radius:4px;
-	-moz-border-radius:4px; 
-	border-radius: 4px; 
-	font:20px "Lucida Console", Monaco, monospace; 
-	font-weight:bold; 
-	color:#e82416; 
-	background-color:#ffa930; 
-	background-image: -moz-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -webkit-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -o-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -ms-linear-gradient(top, #ffa930 0% ,#fab350 100%); 
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fab350', endColorstr='#fab350',GradientType=0 ); 
-	background-image: linear-gradient(top, #ffa930 0% ,#fab350 100%);   
-	-webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff; 
-	-moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;  
-	box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;  
-	display: none;
-	position: relative;
-	top: 10px;
-}
-
-.button:hover {
-	padding:11px 32px; 
-	border:solid 1px #ffa930; 
-	-webkit-border-radius:4px;
-	-moz-border-radius:4px; 
-	border-radius: 4px; 
-	font:20px "Lucida Console", Monaco, monospace; 
-	font-weight:bold; 
-	color:#e82416; 
-	background-color:#ffa930; 
-	background-image: -moz-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -webkit-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -o-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -ms-linear-gradient(top, #ffa930 0% ,#fab350 100%); 
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fab350', endColorstr='#fab350',GradientType=0 ); 
-	background-image: linear-gradient(top, #ffa930 0% ,#fab350 100%);   
-	-webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff; 
-	-moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;  
-	box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;  
-}
-
-.button:active {
-	padding:11px 32px; 
-	border:solid 1px #ffa930; 
-	-webkit-border-radius:4px;
-	-moz-border-radius:4px; 
-	border-radius: 4px; 
-	font:20px "Lucida Console", Monaco, monospace; 
-	font-weight:bold; 
-	color:#e82416; 
-	background-color:#ffa930; 
-	background-image: -moz-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -webkit-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -o-linear-gradient(top, #ffa930 0%, #fab350 100%); 
-	background-image: -ms-linear-gradient(top, #ffa930 0% ,#fab350 100%); 
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fab350', endColorstr='#fab350',GradientType=0 ); 
-	background-image: linear-gradient(top, #ffa930 0% ,#fab350 100%);   
-	-webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff; 
-	-moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;  
-	box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;  
-}
+.button{text-decoration:none; text-align:center; 
+ padding:11px 32px; 
+ border:solid 1px #ffa930; 
+ -webkit-border-radius:4px;
+ -moz-border-radius:4px; 
+ border-radius: 4px; 
+ font:20px "Lucida Console", Monaco, monospace; 
+ font-weight:bold; 
+ color:#e82416; 
+ background-color:#ffa930; 
+ background-image: -moz-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -webkit-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -o-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -ms-linear-gradient(top, #ffa930 0% ,#fab350 100%); 
+ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fab350', endColorstr='#fab350',GradientType=0 ); 
+ background-image: linear-gradient(top, #ffa930 0% ,#fab350 100%);   
+ -webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff; 
+ -moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;  
+ box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;  
+ 
+ display: none;
+ position: relative;
+ top: 10px;
+  
+  }.button:hover{
+ padding:11px 32px; 
+ border:solid 1px #ffa930; 
+ -webkit-border-radius:4px;
+ -moz-border-radius:4px; 
+ border-radius: 4px; 
+ font:20px "Lucida Console", Monaco, monospace; 
+ font-weight:bold; 
+ color:#e82416; 
+ background-color:#ffa930; 
+ background-image: -moz-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -webkit-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -o-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -ms-linear-gradient(top, #ffa930 0% ,#fab350 100%); 
+ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fab350', endColorstr='#fab350',GradientType=0 ); 
+ background-image: linear-gradient(top, #ffa930 0% ,#fab350 100%);   
+ -webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff; 
+ -moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;  
+ box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;  
+  
+ }.button:active{
+ padding:11px 32px; 
+ border:solid 1px #ffa930; 
+ -webkit-border-radius:4px;
+ -moz-border-radius:4px; 
+ border-radius: 4px; 
+ font:20px "Lucida Console", Monaco, monospace; 
+ font-weight:bold; 
+ color:#e82416; 
+ background-color:#ffa930; 
+ background-image: -moz-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -webkit-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -o-linear-gradient(top, #ffa930 0%, #fab350 100%); 
+ background-image: -ms-linear-gradient(top, #ffa930 0% ,#fab350 100%); 
+ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fab350', endColorstr='#fab350',GradientType=0 ); 
+ background-image: linear-gradient(top, #ffa930 0% ,#fab350 100%);   
+ -webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff; 
+ -moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;  
+ box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;  
+  
+ }
